media: Use NON_EXPORTED_BASE for MojoRendererService

TBR=sandersd@chromium.org
BUG=622541

Review-Url: https://codereview.chromium.org/2087373003
Cr-Commit-Position: refs/heads/master@{#401557}

Former-commit-id: 8a0ec0c622ce52013094d7c8b4ce558eb362ae61